--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,21 +2,34 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.rguz.moviewatchlist">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".MainActivity">
+        android:theme="@style/AppTheme">
+        <activity android:name="com.rguz.moviewatchlist.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainPage"></activity>
+        <activity
+            android:name="com.rguz.moviewatchlist.DetailActivity"
+            android:label="Movies"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:parentActivityName="com.rguz.moviewatchlist.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.rguz.moviewatchlist.MainActivity" />
+        </activity>
+        <activity android:name="com.rguz.moviewatchlist.SettingsActivity"
+            android:label="Settings" />
     </application>
 
 </manifest>
+
