--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.github.takusemba:multisnaprecyclerview:1.3.3'
     implementation 'com.github.ivbaranov:materialfavoritebutton:0.1.4'
 
 
