--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,12 @@ dependencies {
     implementation 'com.github.takusemba:multisnaprecyclerview:1.3.3'
     implementation 'com.github.ivbaranov:materialfavoritebutton:0.1.4'
 
+//Room
+    implementation "android.arch.persistence.room:runtime:1.0.0"
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
 
+    implementation "android.arch.lifecycle:extensions:1.1.0"
+    annotationProcessor "android.arch.lifecycle:compiler:1.1.0"
 
 
 }
